sign in and login

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="index.html"><img src="logo.png"></a>
+            <a href="index.html"><img src="/imgs/logo.png"></a>
             <div class="nav-links">
                 <ul>
                     <li> <a href="">HOME</a></li>
@@ -17,6 +17,13 @@
                     <li> <a href="">COURS</a></li>
                     <li> <a href="">CONTACT</a></li>
                 </ul>
+
+            </div>
+            <div class="nav-button">
+                <button class="btn" id="registerBtn">Sign up</button>
+                <button class="btn" id="loginBtn">Log in</button>
+            </div>
+            <div class="nav-menu-btn">
 
             </div>
         </nav>
