--- a/index.html
+++ b/index.html
@@ -3,29 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive z3ma tafa3oli -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <title>LibSource</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <section class="header">
         <nav>
             <a href="index.html"><img src="/imgs/logo.png"></a>
-            <div class="nav-links">
+            <div class="nav-links" id="navLinks">
+                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
                     <li> <a href="">HOME</a></li>
                     <li> <a href="">ABOUT</a></li>
                     <li> <a href="">COURS</a></li>
                     <li> <a href="">CONTACT</a></li>
                 </ul>
-
             </div>
-            <div class="nav-button">
-                <button class="btn" id="registerBtn">Sign up</button>
-                <button class="btn" id="loginBtn">Log in</button>
-            </div>
-            <div class="nav-menu-btn">
-
-            </div>
+                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
             <h1>Bibliothèque Universitaire<!--: Savoirs et Ressources --></h1><!--dak lcomnet li dakhl wach ndiroh ola blach-->
@@ -34,5 +30,29 @@
 
         </div>
     </section>
+
+    <!-------------cours--------------->
+<section class="course">
+    <h1></h1>
+
+
+</section>
+
+
+
+
+
+
+
+<!--show and hid menu bar-->
+    <script>
+        var navLinks = document.getElementById("navLinks");
+        function showMenu(){
+            navLinks.style.right="0";
+        }
+        function hideMenu(){
+            navLinks.style.right="-200px"
+        }
+    </script>
 </body>
 </html>
