--- a/index.html
+++ b/index.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- responsive z3ma tafa3oli -->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- responsive z3ma tafa3oli -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <title>LibSource</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
     <section class="header">
-        <nav>
-            <a href="index.html"><img src="/imgs/logo.png"></a>
-            <div class="nav-links" id="navLinks">
-                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
-                <ul>
-                    <li> <a href="">HOME</a></li>
-                    <li> <a href="">ABOUT</a></li>
-                    <li> <a href="">COURS</a></li>
-                    <li> <a href="">CONTACT</a></li>
-                </ul>
-            </div>
-                <i class="fa-solid fa-bars" onclick="showMenu()"></i>
-        </nav>
-        <div class="text-box">
-            <h1>Bibliothèque Universitaire<!--: Savoirs et Ressources --></h1><!--dak lcomnet li dakhl wach ndiroh ola blach-->
-            <p>Explorez des ressources essentielles pour vos études : cours, exercices, anciens examens et plus encore</p>
-            <a href="" class="botton">Creat an account</a>
-
+      <nav>
+        <a href="index.html"><img src="imgs/logo.png" /></a>
+        <div class="nav-links" id="navLinks">
+          <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+          <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">ABOUT</a></li>
+            <li><a href="">COURS</a></li>
+            <li><a href="">CONTACT</a></li>
+          </ul>
         </div>
+        <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+      </nav>
+      <div class="text-box">
+        <h1>Bibliothèque Universitaire</h1>
+        <p>
+          Explorez des ressources essentielles pour vos études : cours,
+          exercices, anciens examens et plus encore
+        </p>
+        <a href="signup.html" class="botton" target="_blank">Create account</a>
+      </div>
     </section>
 
     <!-------------cours--------------->
-<section class="course">
-    <h1></h1>
+    <section class="course">
+      <h1></h1>
+    </section>
 
-
-</section>
-
-
-
-
-
-
-
-<!--show and hid menu bar-->
+    <!--show and hid menu bar-->
     <script>
-        var navLinks = document.getElementById("navLinks");
-        function showMenu(){
-            navLinks.style.right="0";
-        }
-        function hideMenu(){
-            navLinks.style.right="-200px"
-        }
+      var navLinks = document.getElementById("navLinks");
+      function showMenu() {
+        navLinks.style.right = "0";
+      }
+      function hideMenu() {
+        navLinks.style.right = "-200px";
+      }
     </script>
-</body>
+  </body>
 </html>
