--- a/login.html
+++ b/login.html
@@ -3,32 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Login</title>
     <link rel="stylesheet" href="loginstyles.css">
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>Welcome to Lib Source</h1>
-            <p>Join us today and experience the best!</p>
+            <h1>Login</h1>
         </div>
         <div class="form-container">
-            <h2>Create Your Account</h2>
-            <form action="/signup" method="POST">
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="name" required>
-
+            
+            <form action="/login" method="POST">
                 <label for="email">Email Address</label>
                 <input type="email" id="email" name="email" required>
 
                 <label for="password">Password</label>
                 <input type="password" id="password" name="password" required>
-                <p>If already have account 
-                    <a href="login.html" target="_blank">Login</a>
+                <p>If i dont have account 
+                    <a href="signup.html" target="_blank">Sign Up</a>
                 </p>
-
-
-                <button type="submit">Sign Up</button>
+                <button type="submit">Login</button>
             </form>
         </div>
     </div>
