creat folder signup o sf

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           Explorez des ressources essentielles pour vos études : cours,
           exercices, anciens examens et plus encore
         </p>
-        <a href="signup.html" class="botton" target="_blank">Create account</a>
+        <a href="signup/signup.html" class="botton" target="_blank">Create account</a>
       </div>
     </section>
 
