awdi hadchi beda kaytl3 liya f rassi

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="">HOME</a></li>
             <li><a href="">ABOUT</a></li>
-            <li><a href="">COURS</a></li>
+            <li><a href="#cours-section">COURS</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
         </div>
@@ -40,10 +40,22 @@
       </div>
     </section>
 
-    <!-------------cours--------------->
-    <section class="course">
-      <h1></h1>
+<section class="cours" id="cours-section">
+  <h1>Les Courses</h1>
+      <p>Retrouvez ici tous les cours essentiels pour approfondir vos connaissances et réussir vos études.</p>
+      <div class="grid-container">
+        <div class="cours-col"><a href="#"><img src="imgs/computer-programming-equity-students.jpeg" alt="Cours 1"><h3>Génie Informatique</h3></a></div>
+        <div class="cours-col"><a href="#"><img src="imgs/physique-chimie.jpeg" alt="Cours 2"><h3>TRONC COMMUN Physique Chimie</h3></a></div>
+        <div class="cours-col"><a href="#"><img src="imgs/images.jpeg" alt="Cours 3"><h3>Langues Etrangères Appliquées</h3></a></div>
+        <div class="cours-col"><a href="#"><img src="imgs/licence-economie-et-gestion.jpg" alt="Cours 4"><h3>Sciences Economiques et Gestion</h3></a></div>
+        <div class="cours-col"><a href="#"><img src="imgs/2-1.jpg" alt="Cours 5"><h3>Licence En Media Digital</h3></a></div>
+        <div class="cours-col"><a href="#"><img src="imgs/trois point.png" alt="Cours 6"><h3>autre cours</h3></a></div>
+      </div>
     </section>
+</section>
+
+
+
 
     <!--show and hid menu bar-->
     <script>
