--- a/index.html
+++ b/index.html
@@ -53,8 +53,11 @@
       </div>
     </section>
 </section>
-
-
+ 
+<section class="about-us" id="about-us">
+  <h1>About Us</h1>
+  
+</section>
 
 
     <!--show and hid menu bar-->
