about us section

--- a/index.html
+++ b/index.html
@@ -54,10 +54,35 @@
     </section>
 </section>
  
-<section class="about-us" id="about-us">
-  <h1>About Us</h1>
+
+  <section class="about-us">
+    <h2>About Us</h2>
+    <div class="about-content">
+      <img src="imgs/creators.jpg" alt="Creators of the website" />
+      <p>
+        Nous sommes deux étudiants en Génie Informatique à la Faculté Polydisciplinaire, passionnés par le partage de connaissances et l'entraide académique.
+         Nous avons créé ce site web dans le but de centraliser tous les cours,
+         exercices et examens, afin de faciliter l'accès aux ressources essentielles pour les étudiants de notre faculté.
+      </p>
+    </div>
+  </section>
   
-</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <!--show and hid menu bar-->
