--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
             <li><a href="#">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
+            <li><a href="#about-us">ABOUT US</a></li>
             <li><a href="#cours-section">COURS</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
@@ -55,7 +55,7 @@
 </section>
  
 
-  <section class="about-us">
+  <section class="about-us" id = "about-us">
     <h2>About Us</h2>
     <div class="about-content">
       <img src="imgs/creators.jpg" alt="Creators of the website" />
@@ -66,24 +66,12 @@
       </p>
     </div>
   </section>
-  
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+  <section class="contact-us">
+    <h1>Contact Us</h1>
+    <p>
+      Si vous avez un retour ou un problème, n'hésitez pas à nous contacter.
+    </p>
+  </section>
 
     <!--show and hid menu bar-->
     <script>
@@ -96,4 +84,47 @@
       }
     </script>
   </body>
+  <footer class="footer">
+    <div class="footer-container">
+      <!-- About Section -->
+      <div class="footer-about">
+        <h3>About LibSource</h3>
+        <p>
+          Your go-to platform for university resources. Explore courses, exercises,
+          and past exams all in one place.
+        </p>
+      </div>
+  
+      <!-- Quick Links -->
+      <div class="footer-links">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#about-us">About Us</a></li>
+          <li><a href="#cours-section">Courses</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </div>
+  
+      <!-- Contact Info -->
+      <div class="footer-contact">
+        <h3>Contact Us</h3>
+        <p>If you have feedback or any problem, feel free to contact us.</p>
+        <p><i class="fa-solid fa-envelope"></i> contact@libsource.com</p>
+        <p><i class="fa-solid fa-phone"></i> +123 456 7890</p>
+      </div>
+    </div>
+  
+    <div class="footer-bottom">
+      <p>&copy; 2024 LibSource. All Rights Reserved.</p>
+      <div class="social-icons">
+        <a href="#"><i class="fab fa-facebook-f"></i></a>
+        <a href="#"><i class="fab fa-twitter"></i></a>
+        <a href="#"><i class="fab fa-instagram"></i></a>
+        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+        <a href="#"><i class="fab fa-github"></i></a>
+      </div>
+    </div>
+  </footer>
+  
 </html>
