--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
       <div class="footer-about">
         <h3>About LibSource</h3>
         <p>
-          Your go-to platform for university resources. Explore courses, exercises,
-          and past exams all in one place.
+          Toutes les ressources de ce site sont gratuites à partager et à utiliser. Profitez librement des cours, exercices et examens mis à votre disposition.
         </p>
       </div>
   
@@ -111,7 +110,7 @@
         <h3>Contact Us</h3>
         <p>If you have feedback or any problem, feel free to contact us.</p>
         <p><i class="fa-solid fa-envelope"></i> contact@libsource.com</p>
-        <p><i class="fa-solid fa-phone"></i> +123 456 7890</p>
+        <p><i class="fa-solid fa-phone"></i> +212 68431649</p>
       </div>
     </div>
   
