--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#">HOME</a></li>
             <li><a href="#about-us">ABOUT US</a></li>
             <li><a href="#cours-section">COURS</a></li>
-            <li><a href="">CONTACT</a></li>
+            <li><a href="#contact-us">CONTACT</a></li>
           </ul>
         </div>
         <i class="fa-solid fa-bars" onclick="showMenu()"></i>
@@ -66,7 +66,7 @@
       </p>
     </div>
   </section>
-  <section class="contact-us">
+  <section class="contact-us" id="contact-us">
     <h1>Contact Us</h1>
     <p>
       Si vous avez un retour ou un problème, n'hésitez pas à nous contacter.
@@ -101,7 +101,7 @@
           <li><a href="#">Home</a></li>
           <li><a href="#about-us">About Us</a></li>
           <li><a href="#cours-section">Courses</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact-us">Contact</a></li>
         </ul>
       </div>
   
