--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
             <li><a href="#">HOME</a></li>
-            <li><a href="">ABOUT</a></li>
+            <li><a href="#about-section">ABOUT</a></li>
             <li><a href="#cours-section">COURS</a></li>
             <li><a href="">CONTACT</a></li>
           </ul>
@@ -57,7 +57,7 @@
 
   <section class="about-us">
     <h2>About Us</h2>
-    <div class="about-content">
+    <div class="about-content" id="about-section">
       <img src="imgs/creators.jpg" alt="Creators of the website" />
       <p>
         Nous sommes deux étudiants en Génie Informatique à la Faculté Polydisciplinaire, passionnés par le partage de connaissances et l'entraide académique.
