--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <h1>Les Courses</h1>
       <p>Retrouvez ici tous les cours essentiels pour approfondir vos connaissances et réussir vos études.</p>
       <div class="grid-container">
-        <div class="cours-col"><a href="#"><img src="imgs/computer-programming-equity-students.jpeg" alt="Cours 1"><h3>Génie Informatique</h3></a></div>
+        <div class="cours-col"><a href="/geni informatique/index.html"><img src="imgs/computer-programming-equity-students.jpeg" alt="Cours 1"><h3>Génie Informatique</h3></a></div>
         <div class="cours-col"><a href="#"><img src="imgs/physique-chimie.jpeg" alt="Cours 2"><h3>TRONC COMMUN Physique Chimie</h3></a></div>
         <div class="cours-col"><a href="#"><img src="imgs/images.jpeg" alt="Cours 3"><h3>Langues Etrangères Appliquées</h3></a></div>
         <div class="cours-col"><a href="#"><img src="imgs/licence-economie-et-gestion.jpg" alt="Cours 4"><h3>Sciences Economiques et Gestion</h3></a></div>
