--- a/geni informatique/index.html
+++ b/geni informatique/index.html
@@ -39,7 +39,7 @@
         <input type="text" placeholder="Search..">
       </div>
     </section>
-    <section class="cours">
+    <section class="cours" id="cours">
         
     </section>
 
