--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
     <p>
       Si vous avez un retour ou un problème, n'hésitez pas à nous contacter.
     </p>
+    <form class="contact-form">
+      <input type="text" placeholder="Votre nom" required>
+      <input type="email" placeholder="Votre email" required>
+      <textarea placeholder="Votre message" rows="4" required></textarea>
+      <button type="submit">Envoyer</button>
+    </form>
   </section>
 
     <!--show and hid menu bar-->
