modules add with swiper

--- a/geni informatique/index.html
+++ b/geni informatique/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- responsive z3ma tafa3oli -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
+    <link rel="stylesheet"  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
@@ -40,7 +42,73 @@
       </div>
     </section>
     <section class="cours" id="cours">
-        
+      <div class="container swiper">
+        <div class="card-wrapper">
+          <ul class="card-list swiper-wrapper">
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/thermodyinamic.jpg" alt="Card Image" class="card-image">
+                <p class="badge">thermodyinamic</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/py.jpg" alt="Card Image" class="card-image">
+                <p class="badge">python</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/analyse.jpg" alt="Card Image" class="card-image">
+                <p class="badge">analyse</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/mechanics.jpg" alt="Card Image" class="card-image">
+                <p class="badge">mechanic de point</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/algber.jpg" alt="Card Image" class="card-image">
+                <p class="badge">algbere</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/leslang.jpg" alt="Card Image" class="card-image">
+                <p class="badge">Les languges</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+            <li class="card-item swiper-slide">
+              <a href="#" class="card-link">
+                <img src="img/MTU.jpg" alt="Card Image" class="card-image">
+                <p class="badge">MTU</p>
+                <h2 class="card-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit</h2>
+                <button class="material-symbols-rounded">arrow_forward</button>
+              </a>
+            </li>
+          </ul>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
     </section>
 
 
