--- a/geni informatique/index.html
+++ b/geni informatique/index.html
@@ -108,7 +108,7 @@
         </div>
       </div>
       <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+    <script src="script.js"></script>
     </section>
 
 
