--- a/geni informatique/index.html
+++ b/geni informatique/index.html
@@ -42,6 +42,9 @@
       </div>
     </section>
     <section class="cours" id="cours">
+      <div class="title">
+        <h1>Les cours</h1>
+      </div>
       <div class="container swiper">
         <div class="card-wrapper">
           <ul class="card-list swiper-wrapper">
