--- a/geni informatique/index.html
+++ b/geni informatique/index.html
@@ -20,7 +20,7 @@
   <body>
     <section class="header">
       <nav>
-        <a href="index.html"><img src="img/logo.png" /></a>
+        <a href="/index.html"><img src="img/logo.png" /></a>
         <div class="nav-links" id="navLinks">
           <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
           <ul>
