--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <a href="signup/signin.html" class="botton" target="_blank">Create account</a>
     </div>
   </section>
-
+<!------------------------ les cours part ------------------->
   <section class="cours" id="cours-section">
     <h1>Les Courses</h1>
     <p>Retrouvez ici tous les cours essentiels pour approfondir vos connaissances et réussir vos études.</p>
@@ -64,7 +64,7 @@
     </div>
   </section>
   </section>
-
+<!------------------------ about us part ------------------->
 
   <section class="about-us" id="about-us">
     <div class="about-container">
@@ -79,17 +79,16 @@
       </div>
       <div class="about-images">
         <div class="image-container">
-          <img src="imgs/person1.png" alt="Étudiant 1" class="about-image" />
+          <img src="imgs/Person1 .png" alt="Étudiant 1" class="about-image" />
         </div>
         <div class="image-container">
-          <img src="img/person2.png" alt="Étudiant 2" class="about-image" />
+          <img src="imgs/person2.png" alt="Étudiant 2" class="about-image" />
         </div>
       </div>
     </div>
   </section>>
 
-
-
+<!------------------------ contact us part ------------------->
   <section class="contact-us" id="contact-us">
     <h1>Contact Us</h1>
     <p>
@@ -102,7 +101,7 @@
       <button type="submit">Envoyer</button>
     </form>
   </section>
-  <!-- Add this inside your <body> tag -->
+  
   <div class="chatbot-container">
     <button id="chatbot-toggle" class="chatbot-button">
       <i class="fas fa-robot"></i>
@@ -110,7 +109,7 @@
     <iframe src="chatbot/chatbot.html" id="chatbot-frame" class="chatbot-popup" style="display: none;"></iframe>
   </div>
   <script src="script.js"></script>
-  <!--show and hid menu bar-->
+  
   <script>
     var navLinks = document.getElementById("navLinks");
     function showMenu() {
@@ -123,7 +122,7 @@
 </body>
 <footer class="footer">
   <div class="footer-container">
-    <!-- About Section -->
+    
     <div class="footer-about">
       <h3>About LibSource</h3>
       <p>
