akhoya had tswira mabghat t9ad

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="about-text">
         <h1>À propos de nous</h1>
         <p>
-          Nous sommes deux étudiants en Génie Informatique à la Faculté Polydisciplinaire, passionnés par le partage de
+          Nous sommes deux étudiants en Génie Informatique à la Faculté Polydisciplinaire du Taroudant, passionnés par le partage de
           connaissances et l'entraide académique. Nous avons créé ce site web dans le but de centraliser tous les cours,
           exercices et examens, afin de faciliter l'accès aux ressources essentielles pour les étudiants de notre
           faculté.
