--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <img src="imgs/Person1 .png" alt="Étudiant 1" class="about-image" />
         </div>
         <div class="image-container">
-          <img src="imgs/person2.png" alt="Étudiant 2" class="about-image" />
+          <img src="imgs/mechsenku.png" alt="Étudiant 2" class="about-image" />
         </div>
       </div>
     </div>
@@ -139,7 +139,7 @@
         <li><a href="#contact-us">Contact</a></li>
       </ul>
     </div>
-<<<<<<< HEAD
+
 
     <!-- Contact Info -->
     <div class="footer-contact">
@@ -163,9 +163,9 @@
 </footer>
 
 </html>
-=======
+
   
   </footer>
   
 </html>
->>>>>>> 3fa51518a008af7344377401a4923ea7a7db42c6
+
