chatbot message hmtl script and entree click

--- a/chatbot/chatbot.html
+++ b/chatbot/chatbot.html
@@ -27,132 +27,6 @@
       </div>
     </div>
 
-    <script>
-      // Function to display messages with icons
-      function displayMessage(message, messageClass) {
-        const chatWindow = document.getElementById("chat-window");
-
-        // Create message container
-        const messageContainer = document.createElement("div");
-        messageContainer.classList.add("message-container", messageClass);
-
-        // Create an icon for the message
-        const icon = document.createElement("i");
-        if (messageClass === "bot-message") {
-          icon.classList.add("fas", "fa-robot", "message-icon"); // Bot icon
-        } else if (messageClass === "user-message") {
-          icon.classList.add("fas", "fa-user", "message-icon"); // User icon
-        }
-
-        // Create the message text
-        const messageElement = document.createElement("div");
-        messageElement.classList.add("message");
-        messageElement.textContent = message;
-
-        // Append icon and message to the container
-        messageContainer.appendChild(icon);
-        messageContainer.appendChild(messageElement);
-
-        // Append the container to the chat window
-        chatWindow.appendChild(messageContainer);
-        chatWindow.scrollTop = chatWindow.scrollHeight; // Auto-scroll to the bottom
-      }
-
-      // Function to handle user input and bot response
-      function sendMessage() {
-        const message = document.getElementById("user-input").value;
-        if (message.trim() === "") return; // Prevent empty messages
-
-        displayMessage(message, "user-message"); // Display user message
-        document.getElementById("user-input").value = ""; // Clear input
-
-        const data = {
-                user: message
-                
-            };
-
-            // Send data to the backend
-            fetch('http://127.0.0.1:5000/response', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-              if (data.response_bot) {
-                  displayMessage(data.response_bot, "bot-message");
-                } else {
-                  displayMessage("Error summarizing PDF.", "bot-message");
-                }
-              })
-            .catch((error) => {
-                console.error('Error:', error);
-                // Handle error (e.g., display an error message to the user)
-            });
-        }
-      
-
-      // Function to show bot introduction when the page loads
-      function showBotIntroduction() {
-        const chatWindow = document.getElementById("chat-window");
-        if (chatWindow.children.length === 0) {
-          displayMessage(
-            "Bonjour ! Je suis votre assistant bot. J'aide les étudiants à résumer des documents PDF et à répondre à leurs questions. Comment puis-je vous aider aujourd'hui ?",
-            "bot-message"
-          );
-        }
-      }
-
-      // Trigger bot introduction on page load
-      window.addEventListener("DOMContentLoaded", showBotIntroduction);
-
-      // Handle PDF file upload
-      document
-        .getElementById("pdf-file")
-        .addEventListener("change", (event) => {
-          const file = event.target.files[0];
-          if (file) {
-
-          }
-        });
-
-      // Function to handle PDF file upload
-      document
-        .getElementById("pdf-file")
-        .addEventListener("change", (event) => {
-          const file = event.target.files[0];
-          if (file) {
-            const formData = new FormData();
-            formData.append("file", file);
-
-            displayMessage(
-              `PDF uploaded: Processing...`,
-              "user-message"
-            );
-
-            // Send the file to the backend
-            fetch("http://localhost:5000/upload_pdf", {
-              method: "POST",
-              body: formData,
-            })
-              .then((response) => response.json())
-              .then((data) => {
-                if (data.summary) {
-                  displayMessage(data.summary, "bot-message");
-                } else {
-                  displayMessage("Error summarizing PDF.", "bot-message");
-                }
-              })
-              .catch((error) => {
-                displayMessage(
-                  "Error uploading PDF: " + error.message,
-                  "bot-message"
-                );
-              });
-          }
-        });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
