--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <h1>Les Courses</h1>
     <p>Retrouvez ici tous les cours essentiels pour approfondir vos connaissances et réussir vos études.</p>
     <div class="grid-container">
-      <div class="cours-col"><a href="/geni informatique/index.html"><img
+      <div class="cours-col"><a href="geni_informatique/index.html"><img
             src="imgs/computer-programming-equity-students.jpeg" alt="Cours 1">
           <h3>Génie Informatique</h3>
         </a></div>
@@ -104,7 +104,7 @@
     <button id="chatbot-toggle" class="chatbot-button">
       <i class="fas fa-robot"></i>
     </button>
-    <iframe src="chatbot/chatbot.html" id="chatbot-frame" class="chatbot-popup" style="display: none;"></iframe>
+    <iframe src="chatbot/chatbot.html" id="chatbot-frame" class="chatbot-popup" style="display: none;" ></iframe>
   </div>
   <script src="script.js"></script>
   
