--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
       </div>
     </div>
-  </section>>
+  </section>
 
 <!------------------------ contact us part ------------------->
   <section class="contact-us" id="contact-us">
